# calculator_hw

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  gdb.txt
include/: Application.h  Logger.h  Task.h
src/: Application.cpp  Logger.cpp  app.cpp  app.h  main.cpp
tests/: test_calculator.cpp
